# cpp-opensaml

./: .autotools  .cdtproject  .cproject  .gitignore  .project  Makefile.am  Portfile  Portfile.in  acinclude.m4  config_win32.h  configure.ac  cpp-opensaml2.sln  depend  doxygen.cfg  opensaml.pc.in  opensaml.spec.in  pkginfo.in  postinstall
doc/: Makefile.am  NOTICE.txt  README.txt
saml/: .gitignore  Assertion.h  Makefile.am  RootObject.h  SAMLArtifact.cpp  SAMLArtifact.h  SAMLConfig.cpp  SAMLConfig.h  base.h  exceptions.h  internal.h  resource.h  saml.rc  saml.vcproj  saml.vcxproj  saml.vcxproj.filters  version.cpp  version.h
saml/binding/: ArtifactMap.h  ClientCertAuthRule.h  GenericRequest.h  GenericResponse.h  HTTPRequest.h  HTTPResponse.h  MessageDecoder.h  MessageEncoder.h  MessageFlowRule.h  MessageRoutingRule.h  MessageSigningRule.h  ReplayCache.h  SAMLArtifact.h  SOAPClient.h  SecurityPolicy.h  SecurityPolicyRule.h  SimpleSigningRule.h  URLEncoder.h  XMLSigningRule.h
saml/binding/impl/: ArtifactMap.cpp  ClientCertAuthRule.cpp  MessageDecoder.cpp  MessageEncoder.cpp  MessageFlowRule.cpp  MessageRoutingRule.cpp  MessageSigningRule.cpp  NullSecurityRule.cpp  ReplayCache.cpp  SAMLArtifact.cpp  SOAPClient.cpp  SecurityPolicy.cpp  SimpleSigningRule.cpp  URLEncoder.cpp  XMLSigningRule.cpp
saml/encryption/: EncryptedKeyResolver.cpp  EncryptedKeyResolver.h
saml/profile/impl/: AudienceRestrictionRule.cpp  ConditionsRule.cpp  IgnoreRule.cpp
saml/saml1/binding/: SAML1ArtifactDecoder.h  SAML1ArtifactEncoder.h  SAML1MessageDecoder.h  SAML1MessageRule.h  SAML1POSTDecoder.h  SAML1POSTEncoder.h  SAML1SOAPClient.h  SAML1SOAPDecoder.h  SAML1SOAPEncoder.h  SAMLArtifactType0001.h  SAMLArtifactType0002.h
saml/saml1/binding/impl/: SAML1ArtifactDecoder.cpp  SAML1ArtifactEncoder.cpp  SAML1MessageDecoder.cpp  SAML1MessageRule.cpp  SAML1POSTDecoder.cpp  SAML1POSTEncoder.cpp  SAML1SOAPClient.cpp  SAML1SOAPDecoder.cpp  SAML1SOAPEncoder.cpp  SAMLArtifactType0001.cpp  SAMLArtifactType0002.cpp
saml/saml1/core/: Assertions.h  Protocols.h  SAMLArtifactType0001.h  SAMLArtifactType0002.h
saml/saml1/core/impl/: AssertionsImpl.cpp  AssertionsSchemaValidators.cpp  ProtocolsImpl.cpp  ProtocolsSchemaValidators.cpp  SAMLArtifactType0001.cpp  SAMLArtifactType0002.cpp
saml/saml1/profile/: AssertionValidator.cpp  AssertionValidator.h  BrowserSSOProfileValidator.cpp  BrowserSSOProfileValidator.h
saml/saml1/profile/impl/: AssertionValidator.cpp  BrowserSSOProfileValidator.cpp  SAML1BrowserSSORule.cpp
saml/saml2/binding/: SAML2Artifact.h  SAML2ArtifactDecoder.h  SAML2ArtifactEncoder.h  SAML2ArtifactType0004.h  SAML2MessageDecoder.h  SAML2MessageEncoder.h  SAML2MessageRule.h  SAML2POSTDecoder.h  SAML2POSTEncoder.h  SAML2Redirect.h  SAML2RedirectDecoder.h  SAML2RedirectEncoder.h  SAML2SOAPClient.h  SAML2SOAPDecoder.h  SAML2SOAPEncoder.h
saml/saml2/binding/impl/: SAML2Artifact.cpp  SAML2ArtifactDecoder.cpp  SAML2ArtifactEncoder.cpp  SAML2ArtifactType0004.cpp  SAML2ECPDecoder.cpp  SAML2ECPEncoder.cpp  SAML2MessageDecoder.cpp  SAML2MessageEncoder.cpp  SAML2MessageRule.cpp  SAML2POSTDecoder.cpp  SAML2POSTEncoder.cpp  SAML2Redirect.cpp  (+5 more)
saml/saml2/core/: Assertions.h  Protocols.h  SAML2Artifact.h  SAML2ArtifactType0004.h
saml/saml2/metadata/: AbstractDynamicMetadataProvider.h  AbstractMetadataProvider.h  ChainingMetadataProvider.h  DiscoverableMetadataProvider.h  DynamicMetadataProvider.h  EndpointManager.h  EntityMatcher.h  Metadata.h  MetadataCredentialContext.h  MetadataCredentialCriteria.h  MetadataFilter.h  MetadataKeyInfoIterator.h  MetadataProvider.h  ObservableMetadataProvider.h
saml/saml2/profile/: Assertion20Validator.cpp  AssertionValidator.cpp  AssertionValidator.h  BrowserSSOProfile20Validator.cpp  BrowserSSOProfileValidator.cpp  BrowserSSOProfileValidator.h  SAML2AssertionPolicy.h
saml/security/: AbstractPKIXTrustEngine.h  ChainingTrustEngine.h  MetadataKeyInfoIterator.h  TrustEngine.h  X509TrustEngine.h
saml/security/impl/: AbstractPKIXTrustEngine.cpp  ChainingTrustEngine.cpp  ExplicitKeyTrustEngine.cpp  TrustEngine.cpp
saml/signature/: ContentReference.cpp  ContentReference.h  SignableObject.h  SignatureProfileValidator.cpp  SignatureProfileValidator.h  SigningContext.cpp  SigningContext.h  VerifyingContext.cpp  VerifyingContext.h
saml/util/: CGIParser.cpp  CGIParser.h  CommonDomainCookie.cpp  CommonDomainCookie.h  SAMLConstants.cpp  SAMLConstants.h  XMLConstants.cpp  XMLConstants.h
samlsign/: .gitignore  Makefile.am  samlsign.cpp  samlsign.rc  samlsign.vcproj  samlsign.vcxproj
samltest/: .gitignore  ArtifactMapTest.h  CookieTest.h  Makefile.am  SAMLArtifactCreationTest.h  SAMLArtifactType0001Test.h  SAMLArtifactType0002Test.h  SAMLArtifactType0004Test.h  binding.h  internal.h  samltest.cpp  samltest.h  samltest.vcproj  samltest.vcxproj  samltest.vcxproj.filters
samltest/data/binding/: example-metadata.xml  template.html
samltest/data/security/: FilesystemCredentialResolver.xml  FilesystemKeyResolver.xml  FilesystemMetadataProvider.xml  example-metadata.xml
samltest/data/signature/: SAML1Assertion.xml  SAML1Request.xml  SAML1Response.xml  SAML2Assertion.xml
samltest/encryption/: EncryptedAssertionTest.cpp  EncryptedAssertionTest.h
samltest/saml1/binding/: SAML1ArtifactTest.h  SAML1POSTTest.h
samltest/saml1/profile/: SAML1PolicyTest.h
samltest/saml2/binding/: SAML2ArtifactTest.h  SAML2POSTTest.h  SAML2RedirectTest.h
samltest/saml2/metadata/: FilesystemMetadataProviderTest.h  XMLMetadataProviderTest.h
samltest/saml2/profile/: SAML2PolicyTest.h
samltest/security/: AbstractPKIXTrustEngineTest.h  ExplicitKeyTrustEngineTest.cpp  ExplicitKeyTrustEngineTest.h  StaticPKIXTrustEngineTest.h
samltest/signature/: SAML1AssertionTest.h  SAML1RequestTest.h  SAML1ResponseTest.h  SAML2AssertionTest.h  SAMLSignatureTestBase.h
schemas/: .gitignore  Makefile.am  liberty-paos-v1.1.xsd  saml10-catalog.xml.in  saml11-catalog.xml.in  saml20-catalog.xml.in  sstc-saml-metadata-ext-query.xsd  sstc-saml-metadata-ui-v1.0.xsd  sstc-saml-metadata-ui.xsd  sstc-saml1x-metadata.xsd
(+187 files in other folders)
